syntax = "proto3";
package io.products.channelProduct.service;

option java_outer_classname = "ChannelProductRestActionApi";

import "kalix/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "io/products/channelProduct/action/channel_product_sync_action.proto";

service ChannelProductRestAction {
    option (kalix.codegen) = {
      action: {}
    };
  
    rpc CreateRestChannelProduct(io.products.channelProduct.action.ChannelProducts) returns (ChannelProductHttpResponse) {
      option (google.api.http) = {
          post: "/create_rest_channel_product_impl"
          body: "*"
      };
    }
}


message ChannelProductHttpResponse {
  string status = 1;
  string description = 2;
  map<string, google.protobuf.Value> data = 3;
}
